# UA-AnsiC

./: CMakeLists.txt  Changelog.txt
AnsiCSample/: CMakeLists.txt
Stack/: CMakeLists.txt
